objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>Qauantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sold_item__c</fullName>
        <label>sold item</label>
        <summarizedField>Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Merchandise__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>